# goit-pythonweb-hw-08

./: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 76d4fc6cfda3_initial_migration.py  809e071015fa_initial_migration.py  ddffe1fcd2d2_initial_migration.py
src/: schemas.py
src/api/: contacts.py  utils.py
src/conf/: config.py
src/repository/: contacts.py
src/services/: email.py
